--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,40 @@
 Package: NBGOF
 Type: Package
-Title: Simulation-based Goodness-of-Fit Tests for RNA-Seq
-      Data Analysis
-Description: An R package for implementing
-      goodness-of-fit tests for RNA-Seq data under
-      different negative binomial dispersion models
-Version: 0.1.1
-License: MIT
+Title: Goodness-of-Fit Tests and Model Diagnostics for Negative
+    Binomial Regression of RNA-Sequencing Data
+Description: An R package for implementing goodness-of-fit tests for
+    RNA-Seq data under different negative binomial dispersion
+    models.
+Version: 0.1.5
+License: GPL-2
 Author: Gu Mi <mig@stat.oregonstate.edu>, Yanming Di
-      <diy@stat.oregonstate.edu>, Daniel Schafer
-      <schafer@science.oregonstate.edu>
+    <diy@stat.oregonstate.edu>, Daniel Schafer
+    <schafer@science.oregonstate.edu>
 Maintainer: Gu Mi <mig@stat.oregonstate.edu>
-Depends: R (>= 2.15)
+Depends:
+    R (>= 2.15)
+Imports:
+    NBPSeq (>= 0.1.8),
+    edgeR (>= 3.0.7),
+    calibrate (>= 1.7.1)
 LazyData: yes
 LazyLoad: yes
-License.1: GPL-2
 URL: http://people.oregonstate.edu/~mig
+BugReports: https://github.com/gu-mi/NBGOF/issues
+Collate:
+    'NBGOF-package.R'
+    'glm.nbp.1.R'
+    'model_edgeR_common.R'
+    'model_edgeR_genewise.R'
+    'model_edgeR_tagwise.R'
+    'model_edgeR_trended.R'
+    'model_nb2_v.R'
+    'model_nb_m.R'
+    'model_nbp_m.R'
+    'model_nbp_v.R'
+    'nb.regression.1.R'
+    'nb_gof_m.R'
+    'nb_gof_v.R'
+    'plot.gofm.R'
+    'plot.gofv.R'
+    'utils.R'
