--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,7 +1,9 @@
 S3method(plot,gofm)
 S3method(plot,gofv)
+S3method(summary,gofm)
 export(nb_gof_m)
 export(nb_gof_v)
 import(NBPSeq)
 import(edgeR)
 importFrom(calibrate,textxy)
+useDynLib(NBGOF,Cdqrls)
