add vlog() user-defined link function for gamma regression

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@ S3method(plot,gofv)
 S3method(summary,gofm)
 export(nb_gof_m)
 export(nb_gof_v)
+export(vlog)
 import(NBPSeq)
 import(edgeR)
 importFrom(calibrate,textxy)
