--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Title: Goodness-of-Fit Tests and Model Diagnostics for
 Description: An R package for implementing goodness-of-fit
     tests for RNA-Seq data under different negative
     binomial dispersion models.
-Version: 0.1.5
+Version: 0.1.7
 License: GPL-2
 Author: Gu Mi <mig@stat.oregonstate.edu>, Yanming Di
     <diy@stat.oregonstate.edu>, Daniel Schafer
@@ -16,7 +16,8 @@ Depends:
 Imports:
     NBPSeq (>= 0.1.8),
     edgeR (>= 3.0.7),
-    calibrate (>= 1.7.1)
+    calibrate (>= 1.7.1),
+    numDeriv (>= 2012.3-1)
 LazyData: yes
 LazyLoad: yes
 URL: http://people.oregonstate.edu/~mig
@@ -24,6 +25,7 @@ BugReports: https://github.com/gu-mi/NBGOF/issues
 Collate:
     'NBGOF-package.R'
     'glm.nbp.1.R'
+    'helper.R'
     'model_edgeR_common.R'
     'model_edgeR_genewise.R'
     'model_edgeR_tagwise.R'
@@ -32,11 +34,10 @@ Collate:
     'model_nb_m.R'
     'model_nbp_m.R'
     'model_nbp_v.R'
+    'model_poi_v.R'
     'nb.regression.1.R'
     'nb_gof_m.R'
     'nb_gof_v.R'
     'plot.gofm.R'
     'plot.gofv.R'
     'summary.gofm.R'
-    'utils.R'
-    'vlog.R'
