--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,9 +1,11 @@
 S3method(plot,gofm)
 S3method(plot,gofv)
 S3method(summary,gofm)
+export(ks_gof)
 export(nb_gof_m)
 export(nb_gof_v)
+export(plot.md)
 import(NBPSeq)
 import(edgeR)
-importFrom(calibrate,textxy)
+importFrom(gap,qqunif)
 useDynLib(NBGOF,Cdqrls)
