--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Title: Goodness-of-Fit Tests and Model Diagnostics for
 Description: An R package for implementing goodness-of-fit
     tests for RNA-Seq data under different negative
     binomial dispersion models.
-Version: 0.1.9
+Version: 0.1.11
 License: GPL-2
 Author: Gu Mi <mig@stat.oregonstate.edu>, Yanming Di
     <diy@stat.oregonstate.edu>, Daniel Schafer
@@ -25,9 +25,11 @@ BugReports: https://github.com/gu-mi/NBGOF/issues
 Collate:
     'NBGOF-package.R'
     'arab.R'
+    'earthquake.R'
     'glm.nbp.1.MLE.R'
     'glm.nbp.1.R'
     'helper.R'
+    'ks_gof.R'
     'model_edgeR_common.R'
     'model_edgeR_genewise.R'
     'model_edgeR_tagwise.R'
@@ -42,6 +44,5 @@ Collate:
     'nb_gof_v.R'
     'plot.gofm.R'
     'plot.gofv.R'
-    'summary.gofm.R'
     'plot.md.R'
-    'ks_gof.R'
+    'summary.gofm.R'
