--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: NBGOF
 Type: Package
-Title: Goodness-of-Fit Tests and Model Diagnostics for Negative
-    Binomial Regression of RNA Sequencing Data
-Description: An R package for implementing goodness-of-fit tests
-    for negative binomial (NB) distributions and NB dispersion
-    models, with applications in RNA-Seq data analysis.
-Version: 0.7.25
+Title: Goodness-of-Fit Tests and Model Diagnostics for
+    Negative Binomial Regression of RNA Sequencing Data
+Description: An R package for implementing goodness-of-fit
+    tests for negative binomial (NB) distributions and NB
+    dispersion models, with applications in RNA-Seq data
+    analysis.
+Version: 0.2.1
 License: GPL-2
 Author: Gu Mi <mig@stat.oregonstate.edu>, Yanming Di
     <diy@stat.oregonstate.edu>, Daniel Schafer
@@ -14,7 +15,7 @@ Maintainer: Gu Mi <mig@stat.oregonstate.edu>
 Depends:
     R (>= 2.15.2)
 Imports:
-    NBPSeq (>= 0.1.8),
+    NBPSeq (>= 0.2.1),
     edgeR (>= 3.0.7),
     gap (>= 1.0-13),
     numDeriv (>= 2012.3-1)
@@ -26,11 +27,9 @@ Collate:
     'NBGOF-package.R'
     'arab.R'
     'earthquake.R'
-    'estimate.dispersion.1.R'
     'glm.nbp.1.MLE.R'
     'glm.nbp.1.R'
     'helper.R'
-    'mdoel.nbp.m.1.R'
     'model_edgeR_common.R'
     'model_edgeR_genewise.R'
     'model_edgeR_tagcom.R'
@@ -39,9 +38,10 @@ Collate:
     'model_nb2_v.R'
     'model_nbp_m.R'
     'model_nbp_v.R'
+    'model_nbq_m.R'
     'model_poi_v.R'
-    'nb.gof.m.1.R'
     'nb.regression.1.R'
+    'nb_gof_m.R'
     'nb_gof_v.R'
     'plot.gofm.R'
     'plot.gofv.R'
