--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,10 +1,13 @@
 S3method(plot,gofm)
 S3method(plot,gofv)
 S3method(summary,gofm)
-export(nb_gof_m)
-export(nb_gof_v)
+export(nb.gof.m)
+export(nb.gof.v)
 export(plot.md)
 import(NBPSeq)
 import(edgeR)
+import(foreach)
+import(numDeriv)
+import(parallel)
 importFrom(gap,qqunif)
 useDynLib(NBGOF,Cdqrls)
