ggplot2 for NB dispersion model diagnostics
Replace base R graphics with ggplot2: diagPlot is the single function
to use in multiple genes case. plot.gofv is renamed as EPPlot, but it
is to be revised into ggplot2 in next release.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,6 +1,8 @@
-S3method(plot,gofm)
-S3method(plot,gofv)
 S3method(summary,gofm)
+export(CV)
+export(EPPlot)
+export(diagPlot)
+export(multiplot)
 export(nb.gof.m)
 export(nb.gof.v)
 export(plot.md)
@@ -9,5 +11,4 @@ import(edgeR)
 import(foreach)
 import(numDeriv)
 import(parallel)
-importFrom(gap,qqunif)
 useDynLib(NBGOF,Cdqrls)
