--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,34 +5,34 @@ Title: Goodness-of-Fit Tests and Model Diagnostics for Negative Binomial
 Description: An R package for implementing goodness-of-fit tests for negative
     binomial (NB) distributions and NB dispersion models, with applications in
     RNA-Seq data analysis.
-Version: 0.2.5
+Version: 0.2.7
 Date: 2013-10-09
 License: GPL-2
-Authors@R: c(person(given = 'Gu', family = 'Mi', role = c('aut', 'cre'), email
-    = 'mig@stat.oregonstate.edu'), person(given = 'Yanming', family = 'Di',
-    role = c('aut', 'ths'), email = 'diy@stat.oregonstate.edu'), person(give =
-    'Daniel', family = 'Schafer', role = c('ctb', 'ths'), email =
-    'schafer@science.oregonstate.edu') )
 Author: Gu Mi <mig@stat.oregonstate.edu>, Yanming Di
     <diy@stat.oregonstate.edu>, Daniel Schafer
     <schafer@science.oregonstate.edu>
 Maintainer: Gu Mi <mig@stat.oregonstate.edu>
 Depends:
-    R (>= 2.15.2),
-    doMC (>= 1.3.0)
+    R (>= 2.15.2)
 Imports:
     NBPSeq (>= 0.2.1),
     edgeR (>= 3.0.7),
     numDeriv (>= 2012.3-1),
+    doMC (>= 1.3.0),
     parallel (>= 3.0.1),
-    foreach (>= 1.4.1)
+    foreach (>= 1.4.1),
+    ggplot2 (>= 0.9.2)
 LazyData: yes
 LazyLoad: yes
 URL: http://people.oregonstate.edu/~mig
 BugReports: https://github.com/gu-mi/NBGOF/issues
 Collate:
+    'CV.R'
+    'EPPlot.R'
     'NBGOF-package.R'
+    'ROC.R'
     'arab.R'
+    'diagPlot.R'
     'earthquake.R'
     'glm.nbp.1.MLE.R'
     'glm.nbp.1.R'
@@ -47,10 +47,9 @@ Collate:
     'model.nbp.v.R'
     'model.nbq.m.R'
     'model.poi.v.R'
+    'multiplot.R'
     'nb.gof.m.R'
     'nb.gof.v.R'
     'nb.regression.1.R'
-    'plot.gofm.R'
-    'plot.gofv.R'
     'plot.md.R'
     'summary.gofm.R'
