--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(plot.md)
 import(NBPSeq)
 import(edgeR)
 import(foreach)
+import(ggplot2)
 import(numDeriv)
 import(parallel)
 useDynLib(NBGOF,Cdqrls)
