First public version

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,11 +1,11 @@
 S3method(summary,gofm)
-export(CV)
 export(EPPlot)
+export(MDPlot)
 export(diagPlot)
 export(multiplot)
 export(nb.gof.m)
 export(nb.gof.v)
-export(plot.md)
+import(MASS)
 import(NBPSeq)
 import(edgeR)
 import(foreach)
