--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: NBGOF
 Type: Package
-Title: Goodness-of-Fit Tests and Model Diagnostics for Negative
-    Binomial Regression of RNA Sequencing Data
-Description: An R package for implementing goodness-of-fit tests for
-    negative binomial (NB) distributions and NB dispersion models,
-    with applications in RNA-Seq data analysis.
-Version: 0.2.7
-Date: 2013-10-09
+Title: Goodness-of-Fit Tests and Model Diagnostics for Negative Binomial
+    Regression of RNA Sequencing Data
+Description: An R package for implementing goodness-of-fit tests for negative
+    binomial (NB) distributions and NB dispersion models, with applications in
+    RNA-Seq data analysis.
+Version: 0.1.4
+Date: 2014-02-28
 License: GPL-2
 Author: Gu Mi <mig@stat.oregonstate.edu>, Yanming Di
     <diy@stat.oregonstate.edu>, Daniel Schafer
@@ -18,19 +18,19 @@ Imports:
     NBPSeq (>= 0.2.1),
     edgeR (>= 3.0.7),
     numDeriv (>= 2012.3-1),
+    MASS (>= 7.3-23),
     doMC (>= 1.3.0),
     parallel (>= 3.0.1),
     foreach (>= 1.4.1),
     ggplot2 (>= 0.9.2)
 LazyData: yes
 LazyLoad: yes
-URL: http://people.oregonstate.edu/~mig
+URL: https://github.com/gu-mi/NBGOF
 BugReports: https://github.com/gu-mi/NBGOF/issues
 Collate:
-    'CV.R'
     'EPPlot.R'
+    'MDPlot.R'
     'NBGOF-package.R'
-    'ROC.R'
     'arab.R'
     'diagPlot.R'
     'earthquake.R'
@@ -51,5 +51,4 @@ Collate:
     'nb.gof.m.R'
     'nb.gof.v.R'
     'nb.regression.1.R'
-    'plot.md.R'
     'summary.gofm.R'
