--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,12 +6,11 @@ Description: An R package for implementing goodness-of-fit tests for negative
     binomial (NB) distributions and NB dispersion models, with applications in
     RNA-Seq data analysis.
 Version: 0.1.6
-Date: 2014-10-27
+Date: 2014-11-1
 License: GPL-2
-Author: Gu Mi <mig@stat.oregonstate.edu>, Yanming Di
-    <diy@stat.oregonstate.edu>, Daniel Schafer
-    <schafer@science.oregonstate.edu>
-Maintainer: Gu Mi <mig@stat.oregonstate.edu>
+Author: Gu Mi <neo.migu@gmail.com>, Yanming Di <diy@stat.oregonstate.edu>,
+    Daniel Schafer <schafer@science.oregonstate.edu>
+Maintainer: Gu Mi <neo.migu@gmail.com>
 Depends:
     R (>= 2.15.2)
 Imports:
