--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,27 +1,18 @@
 Package: NBGOF
 Type: Package
-Title: Goodness-of-Fit Tests and Model Diagnostics for Negative Binomial
-    Regression of RNA Sequencing Data
-Description: An R package for implementing goodness-of-fit tests for negative
-    binomial (NB) distributions and NB dispersion models, with applications in
-    RNA-Seq data analysis.
-Version: 0.1.6
-Date: 2014-11-1
+Title: Goodness-of-Fit Tests and Model Diagnostics for Negative Binomial Regression of RNA Sequencing
+           Data
+Description: An R package for implementing goodness-of-fit tests for negative binomial (NB)
+           distributions and NB dispersion models, with applications in RNA-Seq data analysis.
+Version: 0.1.8
+Date: 2015-10-12
 License: GPL-2
-Author: Gu Mi <neo.migu@gmail.com>, Yanming Di <diy@stat.oregonstate.edu>,
-    Daniel Schafer <schafer@science.oregonstate.edu>
+Author: Gu Mi <neo.migu@gmail.com>, Yanming Di <diy@stat.oregonstate.edu>, Daniel Schafer
+           <schafer@science.oregonstate.edu>
 Maintainer: Gu Mi <neo.migu@gmail.com>
-Depends:
-    R (>= 2.15.2)
-Imports:
-    NBPSeq (>= 0.2.1),
-    edgeR (>= 3.0.7),
-    numDeriv (>= 2012.3-1),
-    MASS (>= 7.3-23),
-    doMC (>= 1.3.0),
-    parallel (>= 3.0.1),
-    foreach (>= 1.4.1),
-    ggplot2 (>= 0.9.2)
+Depends: R (>= 2.15.2)
+Imports: NBPSeq (>= 0.2.1), edgeR (>= 3.0.7), numDeriv (>= 2012.3-1), MASS (>= 7.3-23), doMC (>= 1.3.0),
+           parallel (>= 3.0.1), foreach (>= 1.4.1), ggplot2 (>= 0.9.2)
 LazyData: yes
 LazyLoad: yes
 URL: https://github.com/gu-mi/NBGOF
