bug fixes: version 0.2.0
bug fixed for the case of genewise approach; corrected plotting
histogram errors; import grid package to support ggplot2 plotting.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ import(NBPSeq)
 import(edgeR)
 import(foreach)
 import(ggplot2)
+import(grid)
 import(numDeriv)
 import(parallel)
 useDynLib(NBGOF,Cdqrls)
